<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pause"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainScreen" >

    <ImageButton
        android:id="@+id/custom_save_button"
        android:contentDescription="@string/two_state_save_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/custom_audio_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_save_button"
        android:gravity="center" />

    <ImageButton
        android:id="@+id/custom_quit_button"
        android:contentDescription="@string/two_state_quit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/custom_save_button"
        android:layout_below="@+id/custom_save_button"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_quit_button"
        android:gravity="center" />

    <ImageButton
        android:id="@+id/custom_button"
        android:contentDescription="@string/two_state_resume_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/custom_audio_button"
        android:layout_alignParentTop="true"
        android:background="@drawable/custom_button"
        android:focusable="true" />

    <ImageButton
        android:id="@+id/custom_audio_button"
        android:contentDescription="@string/two_state_audio_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/custom_save_button"
        android:layout_below="@+id/custom_button"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_audio_button"
        android:gravity="center" />

</RelativeLayout>